--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@ span11{
 <body>
     
     <div>
-<!--         <img src="https://user-images.githubusercontent.com/108167504/176671381-1ef9cbd6-379b-4d5d-b2ca-9f906bf985f5.png" alt="facebook" height="50"id="we"> -->
-        <img height="50" alt="face" src="https://user-images.githubusercontent.com/108167504/176671751-c83bbf59-0760-42b8-8134-a8a038a1b129.png">
+        <img src="https://user-images.githubusercontent.com/108167504/176671751-c83bbf59-0760-42b8-8134-a8a038a1b129.png" alt="facebook" height="50"id="we">
 
         <br>
       <span10>  Email:<input type="text" placeholder="Enter Email address"id="he"></span10>
