--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ span11{
          span10{
             margin-left: 2.6%;
         } 
+        .login button{
+            width:20px;
+        }
         @media screen and (max-width:948px){
         /* .textbox{
             border: 70px;
@@ -140,7 +143,7 @@ span11{
       <span10>  Email:<input type="text" placeholder="Enter Email address"id="he"reguired></span10>
         <br>
         password:<input type="text" placeholder="Enter password"id="she"reguired>  
-     <button><a href="h.html"> login </a></button>
+        <div class="login"><button> login </button></div>
          
          
     <br>
