--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ span11{
                 <i class="bi bi-eye-slash" id="togglePassword"></i>
                           </nav>
             <br><br>
-            <h2>Badday</h2>
+            <h2>Birthday</h2>
             Date:<select Day >
                 <option>1</option>
                 <option>2</option>
